--- a/partypicasso/public/index.html
+++ b/partypicasso/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>React App</title>
+  <title>Party Picasso</title>
   <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
 
   <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js" crossorigin></script>
